generify rest controller handlers use for powsybl services